--- a/index.html
+++ b/index.html
@@ -499,7 +499,7 @@
     <h2>Services</h2>
     <ul>
         <li>
-            Reviewer: MLSys 2025, ICLR 2025, NeurIPS 2024, ICML 2024
+            Reviewer: COLM 2025, MLSys 2025, ICLR 2025, NeurIPS 2024, ICML 2024
         </li>
         <li>
             Teaching Assistant: Introduction to Deep Learning (CMU), Introduction to Machine Learning (CMU)
