--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </a>, 
                         where I work on Machine Learning Systems. Previously, I earned my M.S. in Electrical and Computer Engineering from 
                         <a href="https://www.cmu.edu">
-                            <img src="assets/img/cmu_logo.jpeg" alt="CMU Logo" style="height: 1.3em; width: auto; margin-left: 0.2em; position: relative; top: 0.3em;"> Carnegie Mellon University (CMU)
+                            <img src="assets/img/cmu_Seal.jpg" alt="CMU Logo" style="height: 1.3em; width: auto; margin-left: 0.2em; position: relative; top: 0.3em;"> Carnegie Mellon University (CMU)
                         </a>, and my bachelor's degree from 
                         <a href="https://www.seu.edu.cn/english/" target="_blank">
                             <img src="assets/img/seu.jpg" alt="Southeast University Logo" style="height: 1.3em; width: auto; margin-left: 0.2em; position: relative; top: 0.3em;"> Southeast University (SEU)
@@ -94,6 +94,10 @@
     <ul>
         <div style="height:170px;width:fit-content;overflow:auto;background:#FFFFFF;">
             <li>
+                <p><span style="color:#3C8CFF"><b>[2025/05/01]</b></span> Our <a href="https://github.com/ByteDance-Seed/ShadowKV" target="blank">ShadowKV</a> has been accepted by <a href="https://icml.cc/" target="blank"><img src="assets/img/icml_logo.jpg", style="height: 1em; width: auto; margin-left: 0.2em; position: relative; top: 0.1em;"> ICML 2025</a> as <span style="color:red">Spotlight</span>! See you in Vancouver!
+                </p>
+            </li>
+            <li>
                 <p>
                     <span style="color: #3C8CFF;"><b>[2025/03/03]</b></span> Join <a href="https://www.bytedance.com/en/" target="blank" style="text-decoration: none;"><img src="assets/img/ByteDance.png" style="height: 1em; width: auto; margin-left: 0.2em; position: relative; top: 0.1em;"> ByteDance</a> <svg viewBox="0 0 149.4 158.09" xmlns="http://www.w3.org/2000/svg" id="nav-logo" class="text-white" style="height: 1em; margin-left: 0.2em; position: relative; top: 0.1em;"><g><path d="M25.08,103.79c1.14-24.71,12.4-39.52,16.78-44.39C20.4,72.96,6.13,96.67,0,114.13v7.37h0s0,0,0,0c0,20.21,17.95,36.6,40.09,36.6,5.11,0,10-.88,14.49-2.48h0c2.32-.79,4.6-1.63,6.85-2.49,6.01-5.92,10.88-12.58,14.78-19.71-32.13,16.02-52.52.48-51.13-29.64Z" fill="rgb(30, 55, 255)"></path><path d="M138.78,67.74c-7.98-5.94-27.06-15.83-48.72-18.44,1.95,24.98.61,57.74-13.84,84.13-3.9,7.13-8.77,13.79-14.78,19.71,24.79-9.54,44.43-22.77,56.62-34.37,18.57-17.68,22.09-34.11,22.14-43.87.01-2.48-.49-4.91-1.43-7.15Z" fill="rgb(55, 225, 190)"></path><path d="M84.33,12.3C75.45,4.6,64.2,0,51.96,0s-23.09,4.45-31.91,11.9C8.5,21.67.83,36.6,0,53.52v60.6c6.13-17.45,20.4-41.17,41.87-54.73,3.28-2.07,6.72-3.92,10.34-5.46,12.41-5.28,25.55-6.14,37.85-4.65-1.45-18.65-4.73-32.94-5.73-37Z" fill="rgb(165, 105, 255)"></path><path d="M104.1,32.68c-2.71-2.73-5.16-5.2-7.12-7.21-1.33-1.4-2.62-2.76-3.86-4.1-5.31-5.47-8.78-9.08-8.78-9.08,1,4.05,4.27,18.35,5.73,37,21.66,2.61,40.74,12.5,48.72,18.44-8.61-8.39-22.9-22.96-34.68-35.05Z" fill="rgb(30, 55, 255)"></path></g></svg><a href="https://team.doubao.com/en/" style="text-decoration: none;"> Seed-Foundation-MLSys</a> team as a Research Scientist.
                 </p>
@@ -113,7 +117,7 @@
             <li>
                 <p><span style="color:#bd6be0"><b>[2023/11/06]</b></span> Join Prof. <a
                     href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>'s group at <a href="https://www.cmu.edu">
-                        <img src="assets/img/cmu_logo.jpeg" alt="CMU Logo" style="height: 1em; width: auto; margin-left: 0.2em; position: relative; top: 0.1em;"> CMU</a>.
+                        <img src="assets/img/cmu_Seal.jpg" alt="CMU Logo" style="height: 1em; width: auto; margin-left: 0.2em; position: relative; top: 0.1em;"> CMU</a>.
                 </p>
             </li>
             <li>
@@ -200,7 +204,7 @@
                     <br>
                     <strong>Hanshi Sun</strong>, <a href="https://lchang20.github.io/">Li-Wen Chang</a>, <a href="https://sites.google.com/view/wenleibao/">Wenlei Bao</a>, <a href="https://sizezheng.github.io/">Size Zheng</a>, <a href="https://zheng-ningxin.github.io/">Ningxin Zheng</a>, <a href="https://scholar.google.com/citations?user=ZMfk2F8AAAAJ&hl=zh-CN">Xin Liu</a>, <a href="https://www.andrew.cmu.edu/user/harryd/">Harry Dong</a>, <a href="https://users.ece.cmu.edu/~yuejiec/index.html">Yuejie Chi</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>
                     <br><br>
-                    <p><i>ArXiv</i>, 2024</p><br>
+                    <p><i>International Conference on Machine Learning (ICML) <span style="color:red">Spotlight</span></i>, 2025</p><br>
                     <p>
                         <a href="https://arxiv.org/pdf/2410.21465.pdf" target="blank">arXiv</a> / <a href="https://bytedance.github.io/ShadowKV/" target="blank">website</a> / <a href="https://github.com/bytedance/ShadowKV" target="blank">code <img src="https://img.shields.io/github/stars/bytedance/ShadowKV?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2024shadowkv.txt", target="blank">bibtex</a>
                     </p>
@@ -316,7 +320,7 @@
                     <br>
                     <strong>Hanshi Sun</strong>, <a href="https://lchang20.github.io/">Li-Wen Chang</a>, <a href="https://sites.google.com/view/wenleibao/">Wenlei Bao</a>, <a href="https://sizezheng.github.io/">Size Zheng</a>, <a href="https://zheng-ningxin.github.io/">Ningxin Zheng</a>, <a href="https://scholar.google.com/citations?user=ZMfk2F8AAAAJ&hl=zh-CN">Xin Liu</a>, <a href="https://www.andrew.cmu.edu/user/harryd/">Harry Dong</a>, <a href="https://users.ece.cmu.edu/~yuejiec/index.html">Yuejie Chi</a>, and <a href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>
                     <br><br>
-                    <p><i>ArXiv</i>, 2024</p><br>
+                    <p><i>International Conference on Machine Learning (ICML) <span style="color:red">Spotlight</span></i>, 2025</p><br>
                     <p>
                         <a href="https://arxiv.org/pdf/2410.21465.pdf" target="blank">arXiv</a> / <a href="https://bytedance.github.io/ShadowKV/" target="blank">website</a> / <a href="https://github.com/bytedance/ShadowKV" target="blank">code <img src="https://img.shields.io/github/stars/bytedance/ShadowKV?style=social&label=Github+Stars" style="vertical-align:middle"></a> / <a href="bibtex/sun2024shadowkv.txt", target="blank">bibtex</a>
                     </p>
@@ -499,7 +503,7 @@
     <h2>Services</h2>
     <ul>
         <li>
-            Reviewer: COLM 2025, MLSys 2025, ICLR 2025, NeurIPS 2024, ICML 2024
+            Reviewer: NeurIPS 2025, ICML 2025, ICLR 2025, COLM 2025, MLSys 2025, ACL ARR 2025
         </li>
         <li>
             Teaching Assistant: Introduction to Deep Learning (CMU), Introduction to Machine Learning (CMU)
@@ -519,7 +523,7 @@
                     </ul>
                 </td>
                 <td width="120px">
-                    <img src="assets/img/cmu_logo.jpeg" width="110px">
+                    <img src="assets/img/cmu_Seal.jpg" width="110px">
                 </td>
                 <td width="170px">
                     <img src="assets/img/cmu_logo_2.png" width="165px">
