--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         </a>, 
                         where I work on Machine Learning Systems. Previously, I earned my M.S. in Electrical and Computer Engineering from 
                         <a href="https://www.cmu.edu">
-                            <img src="assets/img/cmu_Seal.jpg" alt="CMU Logo" style="height: 1.3em; width: auto; margin-left: 0.2em; position: relative; top: 0.3em;"> Carnegie Mellon University (CMU)
+                            <img src="assets/img/cmu_seal.jpg" alt="CMU Logo" style="height: 1.3em; width: auto; margin-left: 0.2em; position: relative; top: 0.3em;"> Carnegie Mellon University (CMU)
                         </a>, and my bachelor's degree from 
                         <a href="https://www.seu.edu.cn/english/" target="_blank">
                             <img src="assets/img/seu.jpg" alt="Southeast University Logo" style="height: 1.3em; width: auto; margin-left: 0.2em; position: relative; top: 0.3em;"> Southeast University (SEU)
@@ -117,7 +117,7 @@
             <li>
                 <p><span style="color:#bd6be0"><b>[2023/11/06]</b></span> Join Prof. <a
                     href="https://www.andrew.cmu.edu/user/beidic/">Beidi Chen</a>'s group at <a href="https://www.cmu.edu">
-                        <img src="assets/img/cmu_Seal.jpg" alt="CMU Logo" style="height: 1em; width: auto; margin-left: 0.2em; position: relative; top: 0.1em;"> CMU</a>.
+                        <img src="assets/img/cmu_seal.jpg" alt="CMU Logo" style="height: 1em; width: auto; margin-left: 0.2em; position: relative; top: 0.1em;"> CMU</a>.
                 </p>
             </li>
             <li>
@@ -523,7 +523,7 @@
                     </ul>
                 </td>
                 <td width="120px">
-                    <img src="assets/img/cmu_Seal.jpg" width="110px">
+                    <img src="assets/img/cmu_seal.jpg" width="110px">
                 </td>
                 <td width="170px">
                     <img src="assets/img/cmu_logo_2.png" width="165px">
